everything I have done this week

--- a/band/band.html
+++ b/band/band.html
@@ -14,17 +14,17 @@
   </header>
   <div>
       <ul>
-        <li><a href="file:///Users/tysonhofstetter/Sites/HTML/band.html"><strong>Home</strong></a></li>
-        <li><a href="file:///Users/tysonhofstetter/Sites/HTML/discography.html"><strong>Discography</strong></a></li>
-        <li><a href="file:///Users/tysonhofstetter/Sites/HTML/biography.html"><strong>Biography</strong></a></li>
+        <li><a href="file:///Users/tysonhofstetter/Sites/html_practise/band.html"><strong>Home</strong></a></li>
+        <li><a href="file:///Users/tysonhofstetter/Sites/html_practise/discography.html"><strong>Discography</strong></a></li>
+        <li><a href="file:///Users/tysonhofstetter/Sites/html_practise/biography.html"><strong>Biography</strong></a></li>
       </ul>
     </div>
   <h1><em>Red Hot Chill Peppers</em></h1>
   <div class="discription">
     <p>Red Hot Chili Peppers are an American rock band formed in Los Angeles in 1983. The group's musical style primarily consists of rock with an emphasis on funk, as well as elements from other genres such as punk rock and psychedelic rock. When played live, their music incorporates elements of jam band due to the improvised nature of many of their performances. Currently, the band consists of founding members vocalist Anthony Kiedis and bassist Flea, longtime drummer Chad Smith, and former touring guitarist Josh Klinghoffer. </p>
   </div>
-  <div>
-  
-  </div>
+  <footer>
+    <p><small>&copy;Red Hot Chill Peppers, 2018</small></p>
+  </footer>
 </body>
 </html>
